<resources>
    <string name="app_name">AbSys</string>
    <string name="filiere">Filiére :</string>
    <string name="group">Group :</string>
    <string name="valider">Valider</string>
    <string name="ajouter_fourmateur">Ajouter Formateur</string>
    <string name="matricule">Matricule</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="crypt">Crypt</string>
    <string name="ajouter_filiere">Ajouter Filiere</string>
    <string name="ajouter_group">Ajouter Group</string>
    <string name="modifier_une_filiere">Modifier Une Filiere</string>
</resources>
